--- a/src/main/webapp/app/entities/entry/entry.component.html
+++ b/src/main/webapp/app/entities/entry/entry.component.html
@@ -11,7 +11,7 @@
     <jhi-alert></jhi-alert>
     <br/>
     <div class="table-responsive" *ngIf="entries">
-        <table class="table table-striped">
+        <!-- <table class="table table-striped">
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="reset.bind(this)">
             <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -26,7 +26,7 @@
             <tr *ngFor="let entry of entries ;trackBy: trackId">
                 <td><a [routerLink]="['/entry', entry.id, 'view' ]">{{entry.id}}</a></td>
                 <td>{{entry.title}}</td>
-                <td>{{entry.content}}</td>
+                <td [innerHTML]="entry.content"></td>
                 <td>{{entry.date | date:'medium'}}</td>
                 <td>
                     <div *ngIf="entry.blog">
@@ -59,6 +59,30 @@
                 </td>
             </tr>
             </tbody>
-        </table>
+        </table> -->
+        <div infinite-scroll (scrolled)="loadPage(page + 1)" [infiniteScrollDisabled]="page >= links['last']" [infiniteScrollDistance]="0">
+           <div *ngFor="let entry of entries; trackBy: trackId">
+               <h2>{{entry.title}}</h2>
+               <small>Posted on {{entry.date | date: 'short'}} by {{entry.blog.user.login}}</small>
+               <div [innerHTML]="entry.content"></div>
+               <div class="btn-group flex-btn-group-container">
+                   <button type="submit"
+                           [routerLink]="['/', { outlets: { popup: 'entry/'+ entry.id + '/edit'} }]"
+                           replaceUrl="true"
+                           class="btn btn-primary btn-sm">
+                           <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                           <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
+                   </button>
+   
+                   <button type="submit"
+                           [routerLink]="['/', { outlets: { popup: 'entry/'+ entry.id + '/delete'} }]"
+                           replaceUrl="true"
+                           class="btn btn-danger btn-sm">
+                           <fa-icon [icon]="'times'"></fa-icon>
+                           <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
+                   </button>
+               </div>
+           </div>
+       </div>
     </div>
 </div>
